# wickrio_addon

./: .gitignore  .gitlab-ci.yml  .gitmodules  BUILD_NUMBER  CMakeLists.txt  Makefile  PREP-FOR-AUTOBUILD  PREP-NEXT-BUILD  PREP-SET-BRANCHES  README.md  REL-NOTES-LIST  TAG-FOR-PRODUCTION  autobuild.sh  autotest.sh  index.d.ts  lib  package-lock.json  package.json  release.txt  wickr-wickrio.pro  wickrio_addon.node
.github/workflows/: codeql-analysis.yml  node-test.yml  npm-publish.yml
clients/: clients.pro
clients/common/: common.pri  wickrIOBootstrap.cpp  wickrIOBootstrap.h  wickrIOClientMain.cpp  wickrIOClientMain.h  wickrIOMsgCallbackService.cpp  wickrIOMsgEmailService.cpp  wickrIOMsgEmailService.h  wickrioipc.cpp  wickrioipc.h  wickriojson.cpp  wickriojson.h  wickriomessagecounter.h
clients/compliance_bot/: BUILD_NUMBER  clientconfigurationinfo.cpp  clientversioninfo.cpp  clientversioninfo.h  compliance_bot.pro  main.cpp  wickrIOClientRuntime.cpp  wickrioconvohdlr.cpp  wickrioeclientmain.cpp
clients/conformance_bot/: clientconfigurationinfo.h  conformance_bot.pro  main.cpp  requesthandler.cpp  requesthandler.h  wickrIOCallbackService.cpp  wickrIOCallbackService.h  wickrioeclientmain.h
clients/libs/: libs.pro
clients/libs/WickrIOClientAPI/: CMakeLists.txt
clients/libs/WickrIOClientAPI/src/: bot_iface.cpp  bot_iface.h  zeromq_iface.cpp  zeromq_iface.h
clients/nodejs/addons/cpp_test/: CMakeLists.txt
clients/nodejs/addons/cpp_test/src/: main.cpp
clients/nodejs/addons/rabbitmq_test/: CMakeLists.txt
clients/nodejs/addons/rabbitmq_test/src/: bot_iface.cpp  bot_iface.h  main.cpp  rabbitmq_iface.cpp
clients/nodejs/addons/wickrio_addon/: CMakeLists.txt  bindings.gyp  package.json
clients/nodejs/addons/wickrio_addon/src/: wickrio_addon.cc
clients/nodejs/addons/wickrio_node.js_addon/: .gitignore  CMakeLists.txt  ComplianceBot_node.js  WelcomeBot_node.js  bot_iface.js  bot_iface_test.cpp  bot_iface_test.js  compliance_bot_node.js  example_app_node.js  package.json  welcome_bot_node.js
clients/nodejs/addons/wickrio_node.js_addon/src/: bot_iface.cpp  bot_iface.h  bot_iface_node.cpp  main.cpp  rabbitmq_iface.cpp  rabbitmq_iface.h  zeromq_iface.h
clients/nodejs/addons/zeromq_test/: CMakeLists.txt
clients/nodejs/addons/zeromq_test/src/: bot_iface.cpp  bot_iface.h  main.cpp  zeromq_iface.cpp  zeromq_iface.h
clients/provisioning/: BUILD_NUMBER  clientconfigurationinfo.cpp  clientconfigurationinfo.h  clientversioninfo.cpp  clientversioninfo.h  cmdProvisioning.cpp  cmdProvisioning.h  main.cpp  provisioning.pro  provisioning.qrc  wickrIOClientRuntime.cpp  wickrIOLoginHdlr.h  wickrIOProvisionHdlr.cpp  wickrIOProvisionHdlr.h  wickrioeclientmain.cpp  wickrioeclientmain.h
clients/test_bot/: BUILD_NUMBER  clientconfigurationinfo.h  main.cpp  test_bot.pro  wickrIOActionHdlr.cpp  wickrioreceivethread.cpp
clients/tools/: tools.pro
clients/welcome_bot/: BUILD_NUMBER  welcome_bot.pro
clients/wickrio/: BUILD_NUMBER  OFFICIAL_BUILD_NUMBER  wickrio.pro
docker/: .gitignore  Dockerfile.node.orig  Dockerfile.orig  Dockerfile.wickrbot.orig  build.docker  dockerSetup  start.sh.orig
docs/WickrIO_bot/: WickrIO_Client_REST_API.docx
docs/broadcast/: WickrIO_Broadcast_Setup_and_Configuration.docx  WickrIO_Client_REST_API.docx
docs/design/: WickrIODirectory_layout.graffle  WickrIOEngine_Architecture.graffle  WickrIO_DevelopmentOverview.pptx  WickrIO_nodejs_addon_API.docx
docs/license/: Wickr_api_bot_license.rtf  Wickr_api_bot_license.txt
docs/nodejs_addon/: WickrIO_Setup_and_Configuration.docx  WickrIO_nodejs_API.doc  WickrIO_nodejs_addon_Setup_and_Configuration.docx
integrations/: integrations.pro
integrations/cpp/: cpp.pro
integrations/nodejs/: README.md
integrations/nodejs/addon/: CMakeLists.txt  package.json
integrations/nodejs/addon/src/: bot_iface_node.cpp
libs/: libs.pro
libs/QtWebApp/: QtWebApp.pri
libs/SMTPEmail/: SMTPEmail.pri
libs/WickrIOConsole/: WickrIOConsole.pri  WickrIOConsole.pro  cmdadvanced.cpp  cmdadvanced.h  cmdclient.cpp  cmdclient.h  cmdconsole.cpp  cmdconsole.h  cmdintegration.cpp  cmdintegration.h  cmdmain.cpp  cmdmain.h  cmdoperation.cpp  cmdoperation.h  cmdparser.cpp  cmdparser.h  cmdserver.cpp  cmdserver.h  cmdusers.cpp  cmdusers.h  consoleserver.cpp  consoleserver.h  webserver.cpp  wickrIOConsoleClientHandler.cpp  wickrIOConsoleClientHandler.h  wickrIOConsoleParserHandler.cpp  wickrIOConsoleParserHandler.h
libs/WickrIOGUI/: WickrIOGUI.pri  WickrIOGUI.pro  wickrbotmessagebox.cpp  wickrbotmessagebox.h
libs/WickrIOLib/: WickrIOLib.pri  WickrIOLib.pro  clientactions.cpp  clientactions.h  createjson.cpp  createjson.h  filedownloader.h  loghandler.cpp  loghandler.h  operationdata.cpp  operationdata.h  perftest.cpp  qtLocalPeer.cpp  qtLocalPeer.h  qtSingleApplication.cpp  qtSingleApplication.h  wickrIOAPIInterface.cpp  wickrIOAPIInterface.h  wickrIOAppSettings.cpp  wickrIOAppSettings.h  wickrIOBootstrap.cpp  wickrIOBootstrap.h  wickrIOClientServer.cpp  wickrIOClientServer.h  wickrIOCmdState.cpp  wickrIOCmdState.h  wickrIOCommon.cpp  wickrIOCommon.h  wickrIOErrorHandler.cpp  wickrIOErrorHandler.h  wickrIOIPCRuntime.cpp  wickrIOIPCRuntime.h  wickrIOIPCService.cpp  wickrIOIPCService.h  wickrIOParsers.h  wickrIOServerCommon.cpp  wickrIOServerCommon.h  wickrbotactioncache.h  wickrbotattachmentcache.h  wickrbotclientevents.h  (+22 more)
libs/integrations/: integrations.pro
libs/qamqpsrc/: qamqpglobal.h  qamqpsrc.pri  qamqpsrc.pro
services/: BUILD_NUMBER  services.pri  services.pro
services/clientserver/: main.cpp  (+4 more)
src/: bot_iface.h  bot_iface_node.cpp  sqs_commands.js  util.js  wickrio_addon.js  zmq_commands.js  zmq_commands.save.js  zmq_sendmessage.js  zmq_sendmessage_worker.js
test/: index.js  package.json  test_zmq_async.js
testing/: clientconfigurationinfo.cpp  clientconfigurationinfo.h  clientversioninfo.cpp  inittest.cpp  inittest.h  maintest.cpp  testing.pro  wickrapplication.cpp  wickrapplication.h
testing/unittesting/: CMakeLists.txt  create-osx.sh  create-win32.sh  install-osx.sh  main.cpp  test_util.cpp  test_util.h
(+616 files in other folders)
